--- a/terms.html
+++ b/terms.html
@@ -46,6 +46,6 @@
   <p>We may update these terms. Continued use of the app implies acceptance of any changes.</p>
 
   <h2>7. Contact</h2>
-  <p>Questions? Contact us at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+  <p>Questions? Contact us at: <a href="mailto:youremail@example.com">gio.apps.publisher@gmail.com</a></p>
 </body>
 </html>
