--- a/privacy.html
+++ b/privacy.html
@@ -58,6 +58,6 @@
   <p>This policy may be updated. Continued use of the app implies acceptance.</p>
 
   <h2>8. Contact</h2>
-  <p>For any questions, contact us at: <a href="mailto:youremail@example.com">gio.apps.publisher@gmail.com</a></p>
+  <p>For any questions, contact us at: <a href="mailto:gio.apps.publisher@gmail.com">gio.apps.publisher@gmail.com</a></p>
 </body>
 </html>
